--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <div class="instagram-continue">
                 <div class="group">
-                    <img src="./img/Instagram-Logo.png" class="instagram-loop" alt="instragram-logo">
+                    <img src="./img/Instagram-Logo.PNG" class="instagram-loop" alt="instragram-logo">
                     <div class="profile-photo">
                         <img src="./img/pf.png" alt="foto-perfil">
                     </div>
